# h-assignment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: config.py  main.py  schemas.py
app/agent/: runner.py  session.py  tools.py
app/core/: aggregate.py  extractors.py  query.py
app/graph/: build.py  extractors.py  state.py
app/graph/nodes/: aggregate.py  chart_select.py  comparison.py  fetch.py  intent.py  query_builder.py  spec_builder.py
app/services/: ctgov_client.py  llm.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md
examples/: example_runs.md
frontend/: .dockerignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AssistantMessage.tsx  ChatInput.tsx  Citations.tsx  ExampleQueries.tsx  MessageList.tsx  MetaNotes.tsx  UserMessage.tsx  VisualizationCard.tsx
frontend/src/components/charts/: BarChart.tsx  GroupedBarChart.tsx  NetworkGraph.tsx  NoDataCard.tsx  TimeSeriesChart.tsx  VegaChart.tsx  vegaShared.ts
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  types.ts
scripts/: run_examples.py
tests/: test_abstention.py  test_agent_flow.py  test_aggregate.py  test_query_builder.py  test_render_guards.py
tests/fixtures/: sample_studies.json
