[project]
name = "ctgov-viz-agent"
version = "0.1.0"
description = "ClinicalTrials.gov query-to-visualization backend agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "langgraph>=0.2.60",
    "langchain>=0.3.10",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
